--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,7 +1,11 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- armadillo-dev.github.io 하단 광고 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2533765701432169"
+     data-ad-slot="9314679596"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-2533765701432169",
-    enable_page_level_ads: true
-  });
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
