--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -13,12 +13,11 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
 <link rel="manifest" href="/assets/manifest.json">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-2533765701432169",
-    enable_page_level_ads: true
-  });
-</script>
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<style type="text/css">
+  .ads {
+    margin-top: 2em;
+  }
+</style>
