--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -58,18 +58,16 @@ layout: default
         {% endif %}
       </footer>
 
-      <div>
-        <!-- armadillo-dev.github.io 하단 광고 -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-2533765701432169"
-            data-ad-slot="9314679596"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
+      <!-- armadillo-dev.github.io 하단 광고 -->
+      <ins class="adsbygoogle"
+          style="display:inline-block"
+          data-ad-client="ca-pub-2533765701432169"
+          data-ad-slot="9314679596"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
 
       {% if page.share %}{% include social-share.html %}{% endif %}
 
